--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
-  </head>
-  <body>
-    <table>
-      <thead>
-        <tr>
-          <th id="name">Nome </th>
-          <th id="age">Idade</th>
-        </tr>
-      </thead>
-      <tbody id="table-body"></tbody>
-    </table>
 
-    <script src="./script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+  <table id="table-orderer"></table>
+  <script src="./script.js"></script>
+</body>
+
 </html>
